--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<h1>Hello, I'm Jildert De Wachter</h1>
-		<p>I'm hosted with GitHub Pages.</p>
+		<h2>LEGO MINDSTORMS EV3 WORKSHOP</h2>
+		<h3>Get your downloads here</h3>
+		<p>EV3 Building Instructions: <a href="https://dl.dropboxusercontent.com/s/sfhxfuoiq1rvktn/Instructions%20WorkshopBot%20final.pdf?dl=1&token_hash=AAGNzw7uYvf-aO8Ol5heLwFLUQs5p_UpHKS6lkXqXTB0sQ"> Get it! </a></p>
 	</body>
 </html>
