--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 	<body>
 		<h2>LEGO MINDSTORMS EV3 WORKSHOP</h2>
 		<h3>Get your downloads here</h3>
-		<p>EV3 Building Instructions: <a href="https://dl.dropboxusercontent.com/s/sfhxfuoiq1rvktn/Instructions%20WorkshopBot%20final.pdf?dl=1&token_hash=AAGNzw7uYvf-aO8Ol5heLwFLUQs5p_UpHKS6lkXqXTB0sQ"> Get it! </a></p>
+		<p>EV3 Building Instructions: <a href="https://dl.dropboxusercontent.com/s/sfhxfuoiq1rvktn/Instructions%20WorkshopBot%20final.pdf?dl=1&token_hash=AAGNzw7uYvf-aO8Ol5heLwFLUQs5p_UpHKS6lkXqXTB0sQ"> Get it! </a>
+		NXT Building Instuctions: 
+
+		</p>
 	</body>
 </html>
