--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<link rel="stylesheet" type="text/css" href="default.css">
+	</head>
 	<body>
 		<h2>LEGO MINDSTORMS EV3 WORKSHOP</h2>
 		<h3>Get your downloads here</h3>
